--- a/software/lang/ru.po
+++ b/software/lang/ru.po
@@ -3,28 +3,28 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=UTF-8"
 
 #: msgstr.str_45page_powerof2
-msgid "Установлен #209Ђазме#209Ђ ст#209Ђаницы к#209Ђатный двум!"
-msgstr "Установлен #209Ђазме#209Ђ ст#209Ђаницы к#209Ђатный двум!"
+msgid "Установлен размер страницы кратный двум!"
+msgstr "Установлен размер страницы кратный двум!"
 
 #: msgstr.str_45page_std
-msgid "Установлен станда#209Ђтный #209Ђазме#209Ђ ст#209Ђаницы"
-msgstr "Установлен станда#209Ђтный #209Ђазме#209Ђ ст#209Ђаницы"
+msgid "Установлен стандартный размер страницы"
+msgstr "Установлен стандартный размер страницы"
 
 #: msgstr.str_block_en
-msgid "Возможно включена защита на запись. Нажмите кнопку \"Снять защиту\" и све#209Ђьтесь с даташитом"
-msgstr "Возможно включена защита на запись. Нажмите кнопку \"Снять защиту\" и све#209Ђьтесь с даташитом"
+msgid "Возможно включена защита на запись. Нажмите кнопку \"Снять защиту\" и сверьтесь с даташитом"
+msgstr "Возможно включена защита на запись. Нажмите кнопку \"Снять защиту\" и сверьтесь с даташитом"
 
 #: msgstr.str_changed
 msgid "Изменен"
 msgstr "Изменен"
 
 #: msgstr.str_check_settings
-msgid "П#209Ђове#209Ђьте наст#209Ђойки"
-msgstr "П#209Ђове#209Ђьте наст#209Ђойки"
+msgid "Проверьте настройки"
+msgstr "Проверьте настройки"
 
 #: msgstr.str_combo_warn
-msgid "Чип будет сте#209Ђт и пе#209Ђезаписан. П#209Ђодолжить?"
-msgstr "Чип будет сте#209Ђт и пе#209Ђезаписан. П#209Ђодолжить?"
+msgid "Чип будет стерт и перезаписан. Продолжить?"
+msgstr "Чип будет стерт и перезаписан. Продолжить?"
 
 #: msgstr.str_connection_error
 msgid "Ошибка подключения к USBAsp"
@@ -43,24 +43,24 @@ msgid "Готово"
 msgstr "Готово"
 
 #: msgstr.str_erasing_flash
-msgid "Сти#209Ђаю флэшку..."
-msgstr "Сти#209Ђаю флэшку..."
+msgid "Стираю флэшку..."
+msgstr "Стираю флэшку..."
 
 #: msgstr.str_goto_addr
-msgid "Пе#209Ђейти по ад#209Ђесу"
-msgstr "Пе#209Ђейти по ад#209Ђесу"
+msgid "Перейти по адресу"
+msgstr "Перейти по адресу"
 
 #: msgstr.str_i2c_no_answer
-msgid "Мик#209Ђосхема не отвечает"
-msgstr "Мик#209Ђосхема не отвечает"
+msgid "Микросхема не отвечает"
+msgstr "Микросхема не отвечает"
 
 #: msgstr.str_id_unknown
 msgid "(Неизвестно)"
 msgstr "(Неизвестно)"
 
 #: msgstr.str_mini_eeprom_support
-msgid "Данная ве#209Ђсия п#209Ђошивки не подде#209Ђживает I2C и MW!"
-msgstr "Данная ве#209Ђсия п#209Ђошивки не подде#209Ђживает I2C и MW!"
+msgid "Данная версия прошивки не поддерживает I2C и MW!"
+msgstr "Данная версия прошивки не поддерживает I2C и MW!"
 
 #: msgstr.str_new_sreg
 msgid "Стало Sreg: "
@@ -76,8 +76,8 @@ msgid "Значение не найдено"
 msgstr "Значение не найдено"
 
 #: msgstr.str_no_eeprom_support
-msgid "Данная ве#209Ђсия п#209Ђошивки не подде#209Ђживается!"
-msgstr "Данная ве#209Ђсия п#209Ђошивки не подде#209Ђживается!"
+msgid "Данная версия прошивки не поддерживается!"
+msgstr "Данная версия прошивки не поддерживается!"
 
 #: msgstr.str_old_sreg
 msgid "Было Sreg: "
@@ -92,64 +92,64 @@ msgid "Поиск HEX значения"
 msgstr "Поиск HEX значения"
 
 #: msgstr.str_set_speed_error
-msgid "Ошибка установки ско#209Ђости SPI"
-msgstr "Ошибка установки ско#209Ђости SPI"
+msgid "Ошибка установки скорости SPI"
+msgstr "Ошибка установки скорости SPI"
 
 #: msgstr.str_size
-msgid "Разме#209Ђ: "
-msgstr "Разме#209Ђ: "
+msgid "Размер: "
+msgstr "Размер: "
 
 #: msgstr.str_specify_hex
-msgid "Укажите шестнадцате#209Ђичные числа"
-msgstr "Укажите шестнадцате#209Ђичные числа"
+msgid "Укажите шестнадцатеричные числа"
+msgstr "Укажите шестнадцатеричные числа"
 
 #: msgstr.str_start_erase
-msgid "Точно сте#209Ђеть чип?"
-msgstr "Точно сте#209Ђеть чип?"
+msgid "Точно стереть чип?"
+msgstr "Точно стереть чип?"
 
 #: msgstr.str_start_write
 msgid "Начать запись?"
 msgstr "Начать запись?"
 
 #: msgstr.str_time
-msgid "В#209Ђемя выполнения: "
-msgstr "В#209Ђемя выполнения: "
+msgid "Время выполнения: "
+msgstr "Время выполнения: "
 
 #: msgstr.str_usb_timeout
 msgid "USB_control_msg отвалился по таймауту!"
 msgstr "USB_control_msg отвалился по таймауту!"
 
 #: msgstr.str_user_cancel
-msgid "П#209Ђе#209Ђвано пользователем"
-msgstr "П#209Ђе#209Ђвано пользователем"
+msgid "Прервано пользователем"
+msgstr "Прервано пользователем"
 
 #: msgstr.str_verify
-msgid "П#209Ђове#209Ђяю флэшку..."
-msgstr "П#209Ђове#209Ђяю флэшку..."
+msgid "Проверяю флэшку..."
+msgstr "Проверяю флэшку..."
 
 #: msgstr.str_verify_error
-msgid "Ошибка с#209Ђавнения по ад#209Ђесу: "
-msgstr "Ошибка с#209Ђавнения по ад#209Ђесу: "
+msgid "Ошибка сравнения по адресу: "
+msgstr "Ошибка сравнения по адресу: "
 
 #: msgstr.str_writing_flash
 msgid "Записываю флэшку..."
 msgstr "Записываю флэшку..."
 
 #: msgstr.str_writing_flash_wchk
-msgid "Записываю флэшку с п#209Ђове#209Ђкой..."
-msgstr "Записываю флэшку с п#209Ђове#209Ђкой..."
+msgid "Записываю флэшку с проверкой..."
+msgstr "Записываю флэшку с проверкой..."
 
 #: msgstr.str_wrong_bytes_read
-msgid "Количество п#209Ђочитанных байт не #209Ђавно #209Ђазме#209Ђу флэшки"
-msgstr "Количество п#209Ђочитанных байт не #209Ђавно #209Ђазме#209Ђу флэшки"
+msgid "Количество прочитанных байт не равно размеру флэшки"
+msgstr "Количество прочитанных байт не равно размеру флэшки"
 
 #: msgstr.str_wrong_bytes_write
-msgid "Количество записанных байт не #209Ђавно #209Ђазме#209Ђу флэшки"
-msgstr "Количество записанных байт не #209Ђавно #209Ђазме#209Ђу флэшки"
+msgid "Количество записанных байт не равно размеру флэшки"
+msgstr "Количество записанных байт не равно размеру флэшки"
 
 #: msgstr.str_wrong_file_size
-msgid "Разме#209Ђ файла больше #209Ђазме#209Ђа чипа"
-msgstr "Разме#209Ђ файла больше #209Ђазме#209Ђа чипа"
+msgid "Размер файла больше размера чипа"
+msgstr "Размер файла больше размера чипа"
 
 #: tmainform.menuitemhardware.caption
 msgid "Программатор"
@@ -368,3 +368,6 @@ msgstr "Поиск микросхемы"
 msgid "Маркировка содержит:"
 msgstr "Маркировка содержит:"
 
+#: tmainform.blankcheckmenuitem.caption
+msgid "Проверка на чистоту"
+msgstr "Проверка на чистоту"
